# GoodbyeDPI-Enhanced

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
scripts/linux/: 1_default_mode.sh  2_dnsredir.sh  4_auto_ttl.sh  5_wrong_checksum.sh  goodbyedpi.service  run_with_setup.sh  service_install.sh  service_remove.sh  setup-iptables.sh
scripts/macos/: 1_default_mode.sh  3_compatible_mode.sh  com.goodbyedpi.plist  run_with_setup.sh  service_install.sh  service_remove.sh  setup-pf.sh
scripts/windows/: 1_default_mode.cmd  2_any_country_dnsredir.cmd  3_compatible_mode.cmd  4_auto_ttl.cmd  5_wrong_checksum.cmd  service_install.cmd  service_remove.cmd
src/: Makefile  blackwhitelist.c  dnsredir.c  dnsredir.h  fakepackets.c  fakepackets.h  goodbyedpi.c  goodbyedpi.h  goodbyedpi_main.c  service.c  service.h  ttltrack.c
src/platform/: platform.h
src/platform/linux/: os_utils.c  packet_capture.c  service.c
src/platform/macos/: os_utils.c  packet_capture.c  service.c
src/platform/win32/: os_utils.c  packet_capture.c  service.c
src/utils/: getline.h
